# Str-lib

./: Avancement Lib.md  LICENSE  README.md  pyproject.toml
Core/: __init__.py  formula.py  mat_reinforcement.py  mat_steel.py  material.py  materials.py  rectangle.py  reinforced_concrete.py  section.py  section_material-old.py
Core/To check/: bolt-TBV.py  timber-TBV.py
RDM/: TFem.py  __init__.py  element.py  loads.py  mesh.py  model.py  node.py  solver.py  test.py
core/: __init__.py  coefficient.py  formula.py  mat_concrete.py  materials-old.py  national_annexe.py  reinforced_concrete.py
core/To check/: bolt-TBV.py  cercle-tbv.py  triangle-tbv.py
core/mat/: mat_concrete.py  mat_reinforcement.py  mat_steel.py
core/sec/: sec_i_h_u.py  sec_rec.py  section.py
core/sec_mat/: sec_mat_i_h_u.py  sec_mat_rc.py
norme/EC2/: Arborescence
norme/EC2/durability/: enrobage.py  espacement.py
norme/EC2/els/: contraintes.py
norme/EC2/elu/: effort_tranchant.py  flexion.py
norme/EC3/: classification.py
norme/EC3-tbc/: __init__.py  imperfection.py
norme/EC3-tbc/buckling/: flexural_buckling.py  interaction_NM.py  lateral_torsional.py
norme/EC3-tbc/els/: __init__.py  deflection.py  limits.py
norme/EC3-tbc/elu/: __init__.py  bending.py  combined.py
norme/EC3-tbc/resistance/: compression.py  shear.py  traction.py
ressource/: HD.json  HE.json  HL.json  HP.json  IPE.json  IPN.json  Le.json  Lie.json  U.json  UPE.json  UPN.json  __init__.py  chs.json  rhs_shs.json  section-arcelor-mital.xlsx
utility/: excel2json.py  lookupinjson.py  section-arcelor-mital.xlsx
(+10 files in other folders)
